# Lung_cancer_risk_models

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  lung-mac.spec  lung-windows.spec  lung.spec  pulmorisk-mac.spec  pulmorisk-windows.spec  pulmorisk.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml  version.yml
scripts/: build_linux.sh  build_macos.sh  convert_icon.py  install.sh
src/app/: GhostTrain.json  Phoenix.json  demo.py  main.py  teal.json
src/app/assets/themes/: AccessibleContrast.json
src/app/config/: settings.py
src/app/controllers/: app_controller.py  base_controller.py  integral_controller.py  menubar_controller.py  sybil_controller.py
src/app/models/: individual_model.py  patient_model.py
src/app/utils/: event_bus.py  helpers.py  integral_inference.py  sybil_epi.py  sybil_inference.py
src/app/views/: integral_view.py  main_view.py  splash_screen.py  sybil_view.py
src/app/views/components/: loading_overlay.py  log_panel.py  menu_bar.py  side_bar.py  split_view.py
tests/: test_sybil_controller.py  test_validators.py
