[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tkinter-app"
version = "0.1.0"
description = "A custom tkinter application"
requires-python = ">=3.10,<3.11"
dependencies = [
    "customtkinter>=5.2.0",
    "Pillow>=12.2.0",
    "sybil @ git+https://github.com/reginabarzilaygroup/Sybil.git@v1.6.0",
    # Fix: torch and torchvision must be declared as direct dependencies so that
    # [tool.uv.sources] redirects them to the PyTorch index. Without this, uv
    # only sees them as transitive deps from Sybil and never consults the
    # pytorch-cu117 index, causing the "no solution found" resolution failure.
    "torch==1.13.1+cu117",
    "torchvision==0.14.1+cu117",
]

[tool.hatch.metadata]
# Required to allow git+https:// direct references in project.dependencies
# (e.g. the Sybil dependency). Hatchling blocks these by default.
allow-direct-references = true


[tool.hatch.build.targets.wheel]
packages = ["src/app"]


[project.scripts]
tkinter-app = "app.main:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.8",
]

# -----------------------------
# Ruff configuration (ONLY HERE)
# -----------------------------
[tool.ruff]
line-length = 88
# Fix: was "py312" but requires-python caps at <3.11, so this must be py310
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP",
    "A", "ARG", "SIM", "TCH", "PLC", "PIE",
    "RET", "RUF"
]

ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
    "B006",
    "C408",
    "ARG001",
    "ARG002",
    "SIM108",
    "RUF012",
    "RUF013",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ARG001", "ARG002", "PLR2004"]
"scripts/**/*.py" = ["ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]


[tool.uv.sources]
torch = { index = "pytorch-cu117" }
torchvision = { index = "pytorch-cu117" }

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true
